--- a/000_today's tools/Structure.html
+++ b/000_today's tools/Structure.html
@@ -8,11 +8,11 @@
     <title>Structure</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765632019273" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765632019273" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765632019273" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765632019273" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765632019273" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765638468146" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765638468146" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765638468146" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765638468146" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765638468146" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
@@ -139,142 +139,7 @@
                     <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span></summary>
                     <ul id="navFav" class="nav-list"></ul>
                 </details>
-                <ul class="nav-sections"><li class="nav-group">
-                <details class="nav-details f-pc" open>
-                    <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>Characters</span></summary>
-                    <ul class="nav-list">
-                    <li><a class="nav-item" href="/03_PCs/Extras%20and%20quirks.html"><span class="nav-icon">•</span><span class="nav-text">Extras and quirks</span></a></li>
-                    <li><a class="nav-item" href="/03_PCs/Nyx.html"><span class="nav-icon">•</span><span class="nav-text">Nyx</span></a></li>
-                    <li><a class="nav-item" href="/03_PCs/Oceanus.html"><span class="nav-icon">•</span><span class="nav-text">Oceanus</span></a></li>
-                    <li><a class="nav-item" href="/03_PCs/Odo%20Kneecapper.html"><span class="nav-icon">•</span><span class="nav-text">Odo Kneecapper</span></a></li>
-                    <li><a class="nav-item" href="/03_PCs/Tenebris.html"><span class="nav-icon">•</span><span class="nav-text">Tenebris</span></a></li>
-                    <li><a class="nav-item" href="/03_PCs/Tihildur.html"><span class="nav-icon">•</span><span class="nav-text">Tihildur</span></a></li>
-                    <li><a class="nav-item" href="/03_PCs/Val'krath.html"><span class="nav-icon">•</span><span class="nav-text">Val'krath</span></a></li>
-                    </ul>
-                </details>
-            </li>
-            <li class="nav-group">
-                <details class="nav-details f-npc" open>
-                    <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>NPCs</span></summary>
-                    <ul class="nav-list">
-                    <li><a class="nav-item" href="/04_NPCs/Accursed%20Spirit%20Naga.html"><span class="nav-icon">•</span><span class="nav-text">Accursed Spirit Naga</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Adult%20Cave%20Dragon.html"><span class="nav-icon">•</span><span class="nav-text">Adult Cave Dragon</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Adult%20Cave%20Monk.html"><span class="nav-icon">•</span><span class="nav-text">Adult Cave Monk</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Adult%20Earth%20Dragon.html"><span class="nav-icon">•</span><span class="nav-text">Adult Earth Dragon</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Adult%20Gold%20Dragon.html"><span class="nav-icon">•</span><span class="nav-text">Adult Gold Dragon</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Agile%20Hand.html"><span class="nav-icon">•</span><span class="nav-text">Agile Hand</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/API%20Created%20Enemy%20E2.html"><span class="nav-icon">•</span><span class="nav-text">API Created Enemy E2</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/API%20Port8080%20Test.html"><span class="nav-icon">•</span><span class="nav-text">API Port8080 Test</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Captain%20Xendros.html"><span class="nav-icon">•</span><span class="nav-text">Captain Xendros</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Cyrieth%20Nerolien.html"><span class="nav-icon">•</span><span class="nav-text">Cyrieth Nerolien</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Daddy%20Salabaster.html"><span class="nav-icon">•</span><span class="nav-text">Daddy Salabaster</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Dusk.html"><span class="nav-icon">•</span><span class="nav-text">Dusk</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Gellan%20Primewater.html"><span class="nav-icon">•</span><span class="nav-text">Gellan Primewater</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Kedjou.html"><span class="nav-icon">•</span><span class="nav-text">Kedjou</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Lysa%20_Ledger_%20Feld.html"><span class="nav-icon">•</span><span class="nav-text">Lysa _Ledger_ Feld</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Raven%20Queen.html"><span class="nav-icon">•</span><span class="nav-text">Raven Queen</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Salabaster%20Shipping.html"><span class="nav-icon">•</span><span class="nav-text">Salabaster Shipping</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Saltmarsh%20Council.html"><span class="nav-icon">•</span><span class="nav-text">Saltmarsh Council</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Sanbalet.html"><span class="nav-icon">•</span><span class="nav-text">Sanbalet</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Scarlet%20Brotherhood.html"><span class="nav-icon">•</span><span class="nav-text">Scarlet Brotherhood</span></a></li>
-                    <li><a class="nav-item" href="/04_NPCs/Test%20Enemy%20From%20E2.html"><span class="nav-icon">•</span><span class="nav-text">Test Enemy From E2</span></a></li>
-                    </ul>
-                </details>
-            </li>
-            <li class="nav-group">
-                <details class="nav-details f-location" open>
-                    <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>World</span></summary>
-                    <ul class="nav-list">
-                    <li><a class="nav-item" href="/02_World/Locations/Bent%20Willow%20Tavern.html"><span class="nav-icon">•</span><span class="nav-text">Bent Willow Tavern</span></a></li>
-                    <li><a class="nav-item" href="/02_World/Locations/Old%20King's%20Road.html"><span class="nav-icon">•</span><span class="nav-text">Old King's Road</span></a></li>
-                    <li><a class="nav-item" href="/02_World/Locations/Road%20Through%20the%20Feywild%20Leak.html"><span class="nav-icon">•</span><span class="nav-text">Road Through the Feywild Leak</span></a></li>
-                    <li><a class="nav-item" href="/02_World/Locations/Salabaster%20Shipping%20HQ.html"><span class="nav-icon">•</span><span class="nav-text">Salabaster Shipping HQ</span></a></li>
-                    <li><a class="nav-item" href="/02_World/Locations/Saltmarsh.html"><span class="nav-icon">•</span><span class="nav-text">Saltmarsh</span></a></li>
-                    <li><a class="nav-item" href="/02_World/Locations/Stormwreck%20Island.html"><span class="nav-icon">•</span><span class="nav-text">Stormwreck Island</span></a></li>
-                    <li><a class="nav-item" href="/02_World/Locations/The%20Inn%20at%20the%20End%20of%20the%20Road.html"><span class="nav-icon">•</span><span class="nav-text">The Inn at the End of the Road</span></a></li>
-                    </ul>
-                </details>
-            </li>
-            <li class="nav-group">
-                <details class="nav-details f-arc" open>
-                    <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>Arcs</span></summary>
-                    <ul class="nav-list">
-                    <li><a class="nav-item" href="/01_Arcs/01_Arcs%20Overview.html"><span class="nav-icon">•</span><span class="nav-text">01_Arcs Overview</span></a></li>
-                    <li><a class="nav-item" href="/01_Arcs/Arc%20-%20Cyrieth's%20Web.html"><span class="nav-icon">•</span><span class="nav-text">Arc - Cyrieth's Web</span></a></li>
-                    <li class="nav-section">
-                        <details class="nav-details f-arc" open>
-                            <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>GoSM</span></summary>
-                            <ul class="nav-list">
-                                <li><a class="nav-item" href="/01_Arcs/GoSM/Factions%20and%20Politics.html"><span class="nav-icon">•</span><span class="nav-text">Factions and Politics</span></a></li>
-                                <li><a class="nav-item" href="/01_Arcs/GoSM/Generally%2C%20GoSM.html"><span class="nav-icon">•</span><span class="nav-text">Generally, GoSM</span></a></li>
-                                <li><a class="nav-item" href="/01_Arcs/GoSM/Masterpiece%20Imbroglio.html"><span class="nav-icon">•</span><span class="nav-text">Masterpiece Imbroglio</span></a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li class="nav-section">
-                        <details class="nav-details f-arc" open>
-                            <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>The Feywild</span></summary>
-                            <ul class="nav-list">
-                                <li><a class="nav-item" href="/01_Arcs/The%20Feywild/Feywild%20Summary.html"><span class="nav-icon">•</span><span class="nav-text">Feywild Summary</span></a></li>
-                                <li><a class="nav-item" href="/01_Arcs/The%20Feywild/the%20trek.html"><span class="nav-icon">•</span><span class="nav-text">the trek</span></a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    </ul>
-                </details>
-            </li>
-            <li class="nav-group">
-                <details class="nav-details f-other" open>
-                    <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>03_Sessions</span></summary>
-                    <ul class="nav-list">
-                    <li><a class="nav-item" href="/00_Campaign/03_Sessions/01%20Finishing%20up%20in%20Saltmarsh.html"><span class="nav-icon">•</span><span class="nav-text">01 Finishing up in Saltmarsh</span></a></li>
-                    </ul>
-                </details>
-            </li>
-            <li class="nav-group">
-                <details class="nav-details f-other" open>
-                    <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>Tools</span></summary>
-                    <ul class="nav-list">
-                    <li><a class="nav-item" href="/05_Tools & Tables/Enemy%20Generator.html"><span class="nav-icon">•</span><span class="nav-text">Enemy Generator</span></a></li>
-                    <li><a class="nav-item" href="/05_Tools & Tables/Random%20Encounter%20Generator.html"><span class="nav-icon">•</span><span class="nav-text">Random Encounter Generator</span></a></li>
-                    <li class="nav-section">
-                        <details class="nav-details f-other" open>
-                            <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>DM References</span></summary>
-                            <ul class="nav-list">
-                                <li><a class="nav-item" href="/05_Tools & Tables/DM%20References/02_Campaign%20Overview%20and%20Key%20points.html"><span class="nav-icon">•</span><span class="nav-text">02_Campaign Overview and Key points</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/DM%20References/House%20Rules.html"><span class="nav-icon">•</span><span class="nav-text">House Rules</span></a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li class="nav-section">
-                        <details class="nav-details f-other" open>
-                            <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>Items & More</span></summary>
-                            <ul class="nav-list">
-                                <li><a class="nav-item" href="/05_Tools & Tables/Items%20%26%20More/Aurumvorax.html"><span class="nav-icon">•</span><span class="nav-text">Aurumvorax</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Items%20%26%20More/Bloodwell%20Vial.html"><span class="nav-icon">•</span><span class="nav-text">Bloodwell Vial</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Items%20%26%20More/Call%20Lightning.html"><span class="nav-icon">•</span><span class="nav-text">Call Lightning</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Items%20%26%20More/Dao.html"><span class="nav-icon">•</span><span class="nav-text">Dao</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Items%20%26%20More/Dawn%20Incarnate.html"><span class="nav-icon">•</span><span class="nav-text">Dawn Incarnate</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Items%20%26%20More/Lost-Items.html"><span class="nav-icon">•</span><span class="nav-text">Lost-Items</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Items%20%26%20More/Sahuagin.html"><span class="nav-icon">•</span><span class="nav-text">Sahuagin</span></a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li class="nav-section">
-                        <details class="nav-details f-other" open>
-                            <summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 12a3 3 0 110-6 3 3 0 010 6z"/></svg></span><span>Shops</span></summary>
-                            <ul class="nav-list">
-                                <li><a class="nav-item" href="/05_Tools & Tables/Shops/Clothes%20and%20Accessories.html"><span class="nav-icon">•</span><span class="nav-text">Clothes and Accessories</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Shops/Fireworks%20and%20Explosives.html"><span class="nav-icon">•</span><span class="nav-text">Fireworks and Explosives</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Shops/Potions.html"><span class="nav-icon">•</span><span class="nav-text">Potions</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Shops/Shops%20Index.html"><span class="nav-icon">•</span><span class="nav-text">Shops Index</span></a></li>
-                                <li><a class="nav-item" href="/05_Tools & Tables/Shops/Weapons%20and%20Shields.html"><span class="nav-icon">•</span><span class="nav-text">Weapons and Shields</span></a></li>
-                            </ul>
-                        </details>
-                    </li>
-                    </ul>
-                </details>
-            </li></ul>
+                <ul class="nav-sections"></ul>
             </nav>
             <!-- Weather card: DnD dice-driven weather generator -->
             <div id="weatherCard" class="card weather-card" aria-label="Weather">
@@ -594,15 +459,15 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/site.js?v=1765632019273"></script>
-    <script src="/assets/favorites.js?v=1765632019273"></script>
-    <script src="/assets/wysiwyg.js?v=1765632019273"></script>
-    <script src="/assets/right-panel.js?v=1765632019273"></script>
-    <script src="/assets/keyboard-nav.js?v=1765632019273"></script>
-    <script src="/assets/theme.js?v=1765632019273"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765632019273"></script>
-    <script src="/assets/collapsible-sections.js?v=1765632019273"></script>
-    <script src="/assets/weather.js?v=1765632019273"></script>
+    <script src="/assets/site.js?v=1765638468146"></script>
+    <script src="/assets/favorites.js?v=1765638468146"></script>
+    <script src="/assets/wysiwyg.js?v=1765638468146"></script>
+    <script src="/assets/right-panel.js?v=1765638468146"></script>
+    <script src="/assets/keyboard-nav.js?v=1765638468146"></script>
+    <script src="/assets/theme.js?v=1765638468146"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765638468146"></script>
+    <script src="/assets/collapsible-sections.js?v=1765638468146"></script>
+    <script src="/assets/weather.js?v=1765638468146"></script>
     
     <!-- Footer Partial: Add site-wide footer content here if needed -->
 <footer class="footer">
