Public template: remove personal featured/recent cards; add neutral section landing pages and keep Enemy Generator

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Home</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765638468146" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765638468146" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765638468146" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765638468146" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765638468146" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765640150163" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765640150163" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765640150163" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765640150163" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765640150163" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
@@ -187,13 +187,16 @@
  <div class="meta">Arc - Saltmarsh & Sahuagin (GoSM)</div>
 </section>
 <section class="home-featured">
- <h3>Featured</h3>
- <div class="cards-grid"><div class="card card-feature"><div class="card-img" style="background-image:url('/assets/ph-header.svg')"></div><div class="card-body"><div class="card-title">Bent Willow Tavern</div><div class="card-text">Location: [[Old King's Road]]</div><a class="chip" href="/02_World/Locations/Bent%20Willow%20Tavern.html">Open</a></div></div><div class="card card-feature"><div class="card-img" style="background-image:url('/assets/ph-header.svg')"></div><div class="card-body"><div class="card-title">Old King's Road</div><div class="card-text">Connected Locations: [[Saltmarsh]], [[Bent Willow Tavern]], [[Feywild]] leak</div><a class="chip" href="/02_World/Locations/Old%20King's%20Road.html">Open</a></div></div><div class="card card-feature"><div class="card-img" style="background-image:url('/assets/ph-header.svg')"></div><div class="card-body"><div class="card-title">Road Through the Feywild Leak</div><div class="card-text">Connected to: [[Old King's Road]], [[Feywild Summary]], [[the trek]], [[Bent Willow Tavern]]</div><a class="chip" href="/02_World/Locations/Road%20Through%20the%20Feywild%20Leak.html">Open</a></div></div><div class="card card-feature"><div class="card-img" style="background-image:url('/assets/ph-header.svg')"></div><div class="card-body"><div class="card-title">Saltmarsh</div><div class="card-text">[[Tihildur]] Shipping company, political involvement?</div><a class="chip" href="/02_World/Locations/Saltmarsh.html">Open</a></div></div><div class="card card-feature"><div class="card-img" style="background-image:url('/assets/ph-header.svg')"></div><div class="card-body"><div class="card-title">Stormwreck Island</div><div class="card-text">Related: [[Saltmarsh]], [[Old King's Road]], [[Oceanus]]</div><a class="chip" href="/02_World/Locations/Stormwreck%20Island.html">Open</a></div></div><div class="card card-feature"><div class="card-img" style="background-image:url('/assets/ph-header.svg')"></div><div class="card-body"><div class="card-title">Scarlet Brotherhood</div><div class="card-text">Related NPCs: [[Cyrieth Nerolien]], [[Skerrin Wavechaser]], [[Anders Solmor]]</div><a class="chip" href="/04_NPCs/Scarlet%20Brotherhood.html">Open</a></div></div></div>
+ <h3>Explore</h3>
+ <div class="cards-grid">
+  <div class="card card-feature"><div class="card-img" style="background-image:url('/assets/ph-header.svg')"></div><div class="card-body"><div class="card-title">Enemy Generator</div><div class="card-text">Create custom enemies for encounters</div><a class="chip" href="/05_Tools%20%26%20Tables/Enemy%20Generator.html">Open</a></div></div>
+  <div class="card card-feature"><div class="card-body"><div class="card-title">Sections</div><div class="card-text">Browse high-level section pages (no personal data included)</div><a class="chip" href="/03_PCs/Characters.html">Sections</a></div></div>
+ </div>
 </section>
 <section class="home-recent">
  <h3>Recent Notes</h3>
- <ul><li><a href="/05_Tools%20%26%20Tables/Random%20Encounter%20Generator.html">Random Encounter Generator</a></li><li><a href="/05_Tools%20%26%20Tables/Shops/Clothes%20and%20Accessories.html">Clothes and Accessories</a></li><li><a href="/05_Tools%20%26%20Tables/Shops/Fireworks%20and%20Explosives.html">Fireworks and Explosives</a></li><li><a href="/05_Tools%20%26%20Tables/Shops/Potions.html">Potions</a></li><li><a href="/05_Tools%20%26%20Tables/Shops/Shops%20Index.html">Shops Index</a></li><li><a href="/05_Tools%20%26%20Tables/Shops/Weapons%20and%20Shields.html">Weapons and Shields</a></li><li><a href="/05_Tools%20%26%20Tables/Items%20%26%20More/Aurumvorax.html">Aurumvorax</a></li><li><a href="/05_Tools%20%26%20Tables/Items%20%26%20More/Bloodwell%20Vial.html">Bloodwell Vial</a></li><li><a href="/05_Tools%20%26%20Tables/Items%20%26%20More/Call%20Lightning.html">Call Lightning</a></li><li><a href="/05_Tools%20%26%20Tables/Items%20%26%20More/Dao.html">Dao</a></li><li><a href="/05_Tools%20%26%20Tables/Items%20%26%20More/Dawn%20Incarnate.html">Dawn Incarnate</a></li><li><a href="/05_Tools%20%26%20Tables/Items%20%26%20More/Sahuagin.html">Sahuagin</a></li></ul>
- <div class="meta">Build: 1764861269285</div>
+ <p class="meta">Recent notes are personal and not included in this public template. Use the Notepad/To-Do tools in your own instance.</p>
+ <div class="meta">Build: 1765640150163</div>
 </section>
         </main>
         <aside class="right"><!-- Right Panel Partial: Drawer with notepad, to-do, and tools -->
@@ -355,15 +358,15 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/site.js?v=1765638468146"></script>
-    <script src="/assets/favorites.js?v=1765638468146"></script>
-    <script src="/assets/wysiwyg.js?v=1765638468146"></script>
-    <script src="/assets/right-panel.js?v=1765638468146"></script>
-    <script src="/assets/keyboard-nav.js?v=1765638468146"></script>
-    <script src="/assets/theme.js?v=1765638468146"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765638468146"></script>
-    <script src="/assets/collapsible-sections.js?v=1765638468146"></script>
-    <script src="/assets/weather.js?v=1765638468146"></script>
+    <script src="/assets/site.js?v=1765640150163"></script>
+    <script src="/assets/favorites.js?v=1765640150163"></script>
+    <script src="/assets/wysiwyg.js?v=1765640150163"></script>
+    <script src="/assets/right-panel.js?v=1765640150163"></script>
+    <script src="/assets/keyboard-nav.js?v=1765640150163"></script>
+    <script src="/assets/theme.js?v=1765640150163"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765640150163"></script>
+    <script src="/assets/collapsible-sections.js?v=1765640150163"></script>
+    <script src="/assets/weather.js?v=1765640150163"></script>
     
     <!-- Footer Partial: Add site-wide footer content here if needed -->
 <footer class="footer">
