--- a/session.html
+++ b/session.html
@@ -8,11 +8,11 @@
     <title>Session</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765643025396" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765643025396" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765643025396" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765643025396" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765643025396" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765644249617" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765644249617" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765644249617" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765644249617" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765644249617" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
@@ -150,7 +150,7 @@
                     <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span></summary>
                     <ul id="navFav" class="nav-list"></ul>
                 </details>
-                <ul id="navSections" class="nav-sections"><li class="nav-group"><details class="nav-details f-pc" open><summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4 18l8-14 8 14H4zm8-8l3 6H9l3-6z"/></svg></span><span>Characters</span></summary><div class="nav-mini"><button class="chip nav-only" data-section="Characters" title="Show only this section">Only</button><input class="nav-mini-input" data-section="Characters" placeholder="Filter section..." /></div></details></li><li class="nav-group"><details class="nav-details f-npc" open><summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M16 11a4 4 0 10-8 0 4 4 0 008 0zm-11 9c0-3 4-5 7-5s7 2 7 5v2H5v-2z"/></svg></span><span>NPCs</span></summary><div class="nav-mini"><button class="chip nav-only" data-section="NPCs" title="Show only this section">Only</button><input class="nav-mini-input" data-section="NPCs" placeholder="Filter section..." /></div></details></li><li class="nav-group"><details class="nav-details f-location" open><summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm0 2c2.9 0 5.4 2.4 6.5 6H5.5C6.6 6.4 9.1 4 12 4zm0 16c-2.9 0-5.4-2.4-6.5-6h13c-1.1 3.6-3.6 6-6.5 6z"/></svg></span><span>World</span></summary><div class="nav-mini"><button class="chip nav-only" data-section="World" title="Show only this section">Only</button><input class="nav-mini-input" data-section="World" placeholder="Filter section..." /></div></details></li><li class="nav-group"><details class="nav-details f-arc" open><summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm5 5l-3 8-8 3 3-8 8-3zM10 10l-1 2 2-1 1-2-2 1z"/></svg></span><span>Arcs</span></summary><div class="nav-mini"><button class="chip nav-only" data-section="Arcs" title="Show only this section">Only</button><input class="nav-mini-input" data-section="Arcs" placeholder="Filter section..." /></div></details></li><li class="nav-group"><details class="nav-details f-other" open><summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4 4h11l-1 3h6v11H4V4zm2 2v9h12V9h-5l1-3H6z"/></svg></span><span>Campaign</span></summary><div class="nav-mini"><button class="chip nav-only" data-section="Campaign" title="Show only this section">Only</button><input class="nav-mini-input" data-section="Campaign" placeholder="Filter section..." /></div></details></li><li class="nav-group"><details class="nav-details f-other" open><summary class="nav-label"><span class="nav-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M21 14l-5-5 2-2 3 3 2-2-3-3 1-1-2-2-3 3-2-2-2 2 2 2-9 9v4h4l9-9 2 2z"/></svg></span><span>Tools</span></summary><div class="nav-mini"><button class="chip nav-only" data-section="Tools" title="Show only this section">Only</button><input class="nav-mini-input" data-section="Tools" placeholder="Filter section..." /></div></details></li></ul>
+                <ul id="navSections" class="nav-sections"></ul>
                 <script src="/assets/nav-loader.js"></script>
             </nav>
             <!-- Weather card: DnD dice-driven weather generator -->
@@ -204,14 +204,7 @@
         <button id="colorsToggle" class="chip" title="Open Colors Tool">Colors</button>
     </div>
     <div id="drawerContent" class="drawer-content">
-        <div id="drawerTop"><!-- Toolbar Partial: Top navigation and per-page controls -->
-<div class="toolbar">
-    <a class="chip" href="/index.html">Hembränt</a>
-    <a class="chip" href="/graph.html">Graph</a>
-    <a class="chip" href="/tags/index.html">Tags</a>
-    <a class="chip" href="/session.html">Session</a>
-    <a class="chip" href="/00_Campaign/00_Campaign%20Dashboard.html">Campaign Dashboard</a><a class="chip" href="/05_Tools%20%26%20Tables/Random%20Encounter%20Generator.html">Encounters</a><a class="chip" href="/05_Tools%20%26%20Tables/DM%20References/02_Campaign%20Overview%20and%20Key%20points.html">Overview</a>
-</div></div>
+        <div id="drawerTop"></div>
         <div class="right-split">
             <div id="paneTop" class="pane">
                 <div class="pane-tabs" aria-hidden="false">
@@ -361,15 +354,19 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/site.js?v=1765643025396"></script>
-    <script src="/assets/favorites.js?v=1765643025396"></script>
-    <script src="/assets/wysiwyg.js?v=1765643025396"></script>
-    <script src="/assets/right-panel.js?v=1765643025396"></script>
-    <script src="/assets/keyboard-nav.js?v=1765643025396"></script>
-    <script src="/assets/theme.js?v=1765643025396"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765643025396"></script>
-    <script src="/assets/collapsible-sections.js?v=1765643025396"></script>
-    <script src="/assets/weather.js?v=1765643025396"></script>
+    <script src="/assets/right-panel-loader.js?v=1765644249617"></script>
+    <script src="/assets/right-panel.js?v=1765644249617"></script>
+    <script src="/assets/site.js?v=1765644249617"></script>
+    <script src="/assets/favorites.js?v=1765644249617"></script>
+    <script src="/assets/wysiwyg.js?v=1765644249617"></script>
+    <script src="/assets/right-panel-loader.js?v=1765644249617"></script>
+    <script src="/assets/right-panel.js?v=1765644249617"></script>
+    <script src="/assets/keyboard-nav.js?v=1765644249617"></script>
+    <script src="/assets/theme.js?v=1765644249617"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765644249617"></script>
+    <script src="/assets/collapsible-sections.js?v=1765644249617"></script>
+    <script src="/assets/weather.js?v=1765644249617"></script>
+    
     <script src="/assets/session.js?v=1765643025396"></script>
     <!-- Footer Partial: Add site-wide footer content here if needed -->
 <footer class="footer">
