--- a/Tools.html
+++ b/Tools.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>2025-12-04</title>
+    <title>Tools & Tables</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
     <link rel="stylesheet" href="/assets/style.css?v=1765650119499" />
@@ -177,19 +177,23 @@
     </div>
 </div></aside>
         <main class="main">
+
             <div class="breadcrumb-container">
                 <div id="breadcrumbText" class="main-breadcrumb meta"></div>
-                <button id="btnDeletePage" class="delete-page-btn" title="Delete this page"
-                    aria-label="Delete this page">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path
-                            d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2M10 11v6M14 11v6" />
+                <button id="btnDeletePage" class="delete-page-btn" title="Delete this page" aria-label="Delete this page">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2M10 11v6M14 11v6"></path>
                     </svg>
                 </button>
-            </div><article><div class="page-header" style="--page-header:url('/assets/ph-header.svg')"></div><h1>2025-12-04</h1>
-</article>
-        </main>
+            </div><h1>Tools &amp; Tables</h1>
+            <p>Included tools (public):</p>
+            <ul>
+                <li><a href="/05_Tools%20%26%20Tables/Enemy%20Generator.html">Enemy Generator</a></li>
+                <li><a href="/05_Tools%20%26%20Tables/Random%20Encounter%20Generator.html">Random Encounter Generator</a></li>
+            </ul>
+            <p>Personal tools and notes should be kept in <code>data/05_Tools &amp; Tables/</code>.</p><p><br></p>
+        
+</main>
         <aside class="right"><!-- Right Panel Partial: Drawer with notepad, to-do, and tools -->
 <div class="drawer" aria-label="Tools">
     <div class="drawer-handle">
