--- a/Tools.html
+++ b/Tools.html
@@ -8,11 +8,11 @@
     <title>Tools & Tables</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765650119499" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765662086862" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
@@ -135,17 +135,7 @@
                 <a class="nav-item nav-dashboard" href="/index.html"><span class="nav-icon">🏠</span><span
                         class="nav-text">Dashboard</span></a>
                 <div class="nav-quick"><input id="navQuick" placeholder="Quick nav..." /></div>
-                <details class="nav-details nav-tools-quick" open>
-                    <summary class="nav-label"><span class="nav-icon">🛠️</span><span>Tools</span></summary>
-                    <ul class="nav-list">
-                        <li><a class="nav-item" href="/data/05_Tools%20%26%20Tables/Enemy%20Generator.html"><span
-                                    class="nav-icon">•</span><span class="nav-text">Enemy Generator</span></a></li>
-                        <li><a class="nav-item"
-                                href="/data/05_Tools%20%26%20Tables/Random%20Encounter%20Generator.html"><span
-                                    class="nav-icon">•</span><span class="nav-text">Random Encounter
-                                    Generator</span></a></li>
-                    </ul>
-                </details>
+                <!-- Top quick Tools block removed - use the Tools section from assets/nav.json instead -->
                 <details class="nav-details" open>
                     <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span></summary>
                     <ul id="navFav" class="nav-list"></ul>
@@ -177,12 +167,14 @@
     </div>
 </div></aside>
         <main class="main">
-
             <div class="breadcrumb-container">
                 <div id="breadcrumbText" class="main-breadcrumb meta"></div>
-                <button id="btnDeletePage" class="delete-page-btn" title="Delete this page" aria-label="Delete this page">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2M10 11v6M14 11v6"></path>
+                <button id="btnDeletePage" class="delete-page-btn" title="Delete this page"
+                    aria-label="Delete this page">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2M10 11v6M14 11v6" />
                     </svg>
                 </button>
             </div><h1>Tools &amp; Tables</h1>
@@ -192,8 +184,7 @@
                 <li><a href="/05_Tools%20%26%20Tables/Random%20Encounter%20Generator.html">Random Encounter Generator</a></li>
             </ul>
             <p>Personal tools and notes should be kept in <code>data/05_Tools &amp; Tables/</code>.</p><p><br></p>
-        
-</main>
+        </main>
         <aside class="right"><!-- Right Panel Partial: Drawer with notepad, to-do, and tools -->
 <div class="drawer" aria-label="Tools">
     <div class="drawer-handle">
@@ -353,18 +344,18 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/right-panel-loader.js?v=1765650119499"></script>
-    <script src="/assets/right-panel.js?v=1765650119499"></script>
-    <script src="/assets/site.js?v=1765650119499"></script>
-    <script src="/assets/favorites.js?v=1765650119499"></script>
-    <script src="/assets/wysiwyg.js?v=1765650119499"></script>
-    <script src="/assets/right-panel-loader.js?v=1765650119499"></script>
-    <script src="/assets/right-panel.js?v=1765650119499"></script>
-    <script src="/assets/keyboard-nav.js?v=1765650119499"></script>
-    <script src="/assets/theme.js?v=1765650119499"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765650119499"></script>
-    <script src="/assets/collapsible-sections.js?v=1765650119499"></script>
-    <script src="/assets/weather.js?v=1765650119499"></script>
+    <script src="/assets/right-panel-loader.js?v=1765662086862"></script>
+    <script src="/assets/right-panel.js?v=1765662086862"></script>
+    <script src="/assets/site.js?v=1765662086862"></script>
+    <script src="/assets/favorites.js?v=1765662086862"></script>
+    <script src="/assets/wysiwyg.js?v=1765662086862"></script>
+    <script src="/assets/right-panel-loader.js?v=1765662086862"></script>
+    <script src="/assets/right-panel.js?v=1765662086862"></script>
+    <script src="/assets/keyboard-nav.js?v=1765662086862"></script>
+    <script src="/assets/theme.js?v=1765662086862"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765662086862"></script>
+    <script src="/assets/collapsible-sections.js?v=1765662086862"></script>
+    <script src="/assets/weather.js?v=1765662086862"></script>
     
     <!-- Footer Partial: Add site-wide footer content here if needed -->
 <footer class="footer">
