--- a/01_Arcs/Arcs.html
+++ b/01_Arcs/Arcs.html
@@ -8,11 +8,11 @@
     <title>Arcs</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765650119499" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765650119499" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765662086862" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
@@ -135,17 +135,7 @@
                 <a class="nav-item nav-dashboard" href="/index.html"><span class="nav-icon">🏠</span><span
                         class="nav-text">Dashboard</span></a>
                 <div class="nav-quick"><input id="navQuick" placeholder="Quick nav..." /></div>
-                <details class="nav-details nav-tools-quick" open>
-                    <summary class="nav-label"><span class="nav-icon">🛠️</span><span>Tools</span></summary>
-                    <ul class="nav-list">
-                        <li><a class="nav-item" href="/data/05_Tools%20%26%20Tables/Enemy%20Generator.html"><span
-                                    class="nav-icon">•</span><span class="nav-text">Enemy Generator</span></a></li>
-                        <li><a class="nav-item"
-                                href="/data/05_Tools%20%26%20Tables/Random%20Encounter%20Generator.html"><span
-                                    class="nav-icon">•</span><span class="nav-text">Random Encounter
-                                    Generator</span></a></li>
-                    </ul>
-                </details>
+                <!-- Top quick Tools block removed - use the Tools section from assets/nav.json instead -->
                 <details class="nav-details" open>
                     <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span></summary>
                     <ul id="navFav" class="nav-list"></ul>
@@ -350,18 +340,18 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/right-panel-loader.js?v=1765650119499"></script>
-    <script src="/assets/right-panel.js?v=1765650119499"></script>
-    <script src="/assets/site.js?v=1765650119499"></script>
-    <script src="/assets/favorites.js?v=1765650119499"></script>
-    <script src="/assets/wysiwyg.js?v=1765650119499"></script>
-    <script src="/assets/right-panel-loader.js?v=1765650119499"></script>
-    <script src="/assets/right-panel.js?v=1765650119499"></script>
-    <script src="/assets/keyboard-nav.js?v=1765650119499"></script>
-    <script src="/assets/theme.js?v=1765650119499"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765650119499"></script>
-    <script src="/assets/collapsible-sections.js?v=1765650119499"></script>
-    <script src="/assets/weather.js?v=1765650119499"></script>
+    <script src="/assets/right-panel-loader.js?v=1765662086862"></script>
+    <script src="/assets/right-panel.js?v=1765662086862"></script>
+    <script src="/assets/site.js?v=1765662086862"></script>
+    <script src="/assets/favorites.js?v=1765662086862"></script>
+    <script src="/assets/wysiwyg.js?v=1765662086862"></script>
+    <script src="/assets/right-panel-loader.js?v=1765662086862"></script>
+    <script src="/assets/right-panel.js?v=1765662086862"></script>
+    <script src="/assets/keyboard-nav.js?v=1765662086862"></script>
+    <script src="/assets/theme.js?v=1765662086862"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765662086862"></script>
+    <script src="/assets/collapsible-sections.js?v=1765662086862"></script>
+    <script src="/assets/weather.js?v=1765662086862"></script>
     
     <!-- Footer Partial: Add site-wide footer content here if needed -->
 <footer class="footer">
