refactored global nav

--- a/Characters.html
+++ b/Characters.html
@@ -172,8 +172,7 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/right-panel-loader.js?v=1765664019735"></script>
-    <script src="/assets/right-panel.js?v=1765664019735"></script>
+    <!-- duplicate right-panel loader/scripts removed (kept earlier include) -->
     <script src="/assets/header-loader.js?v=1765664019735"></script>
     <script src="/assets/site.js?v=1765664019735"></script>
     <script src="/assets/favorites.js?v=1765664019735"></script>
