Phase 4C Pilot Batch 3 corrective: Revert footer injection on 2025-12-04.html (avoid dated/user-like pages). Update status, log, and rollout report. Verify: PASS.

--- a/2025-12-04.html
+++ b/2025-12-04.html
@@ -358,10 +358,10 @@
     <script src="/assets/enemy-generator.js?v=1765788543237"></script>
     {{/if}}
     
-
-    <!-- Footer injected via assets/footer-loader.js -->
-    <div id="footer-placeholder"></div>
-    <script src="/assets/footer-loader.js"></script>
+    <!-- Footer Partial: Add site-wide footer content here if needed -->
+<footer class="footer">
+    <div class="meta">&copy; 2025 Feywild Adventures</div>
+</footer>
 
 </body>
 
